# move-rust-sdk

./: AGENTS.md  Cargo.toml  MIGRATION.md  README.md
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/aptos-sdk/: README.md
crates/move-core-sdk/: CHANGELOG.md  Cargo.toml  README.md  tarpaulin.toml
crates/move-core-sdk-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/move-core-sdk-macros/src/: codegen.rs  lib.rs
crates/move-core-sdk-macros/tests/ui/fail/: move_struct_invalid_attr.rs
crates/move-core-sdk-macros/tests/ui/pass/: move_struct_basic.rs  move_struct_defaults.rs
crates/move-core-sdk/examples/: account_management.rs  advanced_transactions.rs  balance_checker.rs  call_contract.rs  codegen.rs  contract_bindings.rs  deploy_module.rs  entry_function.rs  event_queries.rs  indexer_queries.rs  multi_agent.rs  multi_key_account.rs  multi_sig_account.rs  multisig_v2.rs  nft_operations.rs  read_contract_state.rs  script_transaction.rs  simulation.rs  sponsored_transaction.rs  transaction_data.rs  transaction_waiting.rs  transfer.rs  view_function.rs
crates/move-core-sdk/src/: aptos.rs  config.rs  error.rs  lib.rs  retry.rs
crates/move-core-sdk/src/account/: ed25519.rs  mnemonic.rs  mod.rs  multi_ed25519.rs  multi_key.rs  secp256k1.rs  secp256r1.rs  webauthn.rs
crates/move-core-sdk/src/api/: faucet.rs  fullnode.rs  indexer.rs
crates/move-core-sdk/src/codegen/: build_helper.rs  generator.rs  mod.rs
crates/move-core-sdk/src/crypto/: ed25519.rs  hash.rs  mod.rs  multi_ed25519.rs
crates/move-core-sdk/src/transaction/: batch.rs  builder.rs  input.rs  mod.rs  payload.rs  simulation.rs  sponsored.rs  types.rs
crates/move-core-sdk/src/types/: address.rs  chain_id.rs  hash.rs  move_types.rs
crates/move-core-sdk/tests/: lib.rs
crates/move-core-sdk/tests/behavioral/: mod.rs  wire_format.rs
crates/move-core-sdk/tests/e2e/: mod.rs
crates/move-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/move-sdk/examples/: aptos_connect.rs  custom_chain.rs  custom_only.rs  movement_connect.rs
crates/move-sdk/src/: client.rs  config.rs  lib.rs  preset.rs
crates/move-sdk/src/tests/: config.rs  feature_gating.rs  mod.rs  preset.rs
