[package]
name = "move-core-sdk-macros"
version = "0.3.0"
description = "Procedural macros for type-safe Move contract bindings"
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["move", "blockchain", "macros", "codegen", "web3"]
categories = ["cryptography", "development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Path-only dep: stripped from published crate (breaks circular publish dependency).
# The macros crate only needs move-core-sdk for trybuild compile tests during local dev.
move-core-sdk = { path = "../move-core-sdk" }
tokio = { workspace = true, features = ["full", "test-util"] }
trybuild = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

